--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                         </li>
                         <li class="lists ">
                             <a href="/collections?personal=1">图标库</a>
+                            <ul class="quick-menu-sub">
+                                <li><a href="/collections">官方公开库</a></li>
+                                <li><a href="/collections?personal=1">所有公开库</a></li>
+                            </ul>
                         </li>
                         <li class="lists ">
                             <a href="/webfont">WebFont</a>
